# snek-utimate

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  notes
.ci/: compile.sh
.github/: workflowsintegration-tests.yml
.github/workflows/: codeql-analysis.yml  cppcheck.yml  integration-tests.yml  linux-tests.yml  test-macos.yml  test-windows.yml
dependencies/: CMakeLists.txt
frontends/: CMakeLists.txt  main.cpp
menu/: CMakeLists.txt
snek/: CMakeLists.txt  info.hpp.in
snek-frontends/: CMakeLists.txt
snek-menu/: CMakeLists.txt
snek-ultimate/: main.cpp
tests/: CMakeLists.txt
